# hello_cmake_test

./: .gitignore  CMakeLists.txt  MedianFinder.h  header.h  maxPoints.h  productExceptSelf.h  sample_tests.cpp
app/: CMakeLists.txt  main.cpp
primes/: CMakeLists.txt  primes.cpp  primes.h
tests/: CMakeLists.txt  is_prime_test.cpp  prime_twins_test.cpp  primes_test.cpp
